# opengl-renderer

./: .clangd-format  .gitignore  CMakeLists.txt  README.org  flake.nix  justfile
shaders/: hello_triangle.frag  hello_triangle.vert  shader.frag  shader.vert
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Clock.h  EntryPoint.h  GUI.cpp  GUI.h  Shader.cpp  Shader.h  Shape.h  main.cpp
