cmake_minimum_required(VERSION 3.10.0 FATAL_ERROR)
project(raytracing-reborn C CXX)
find_package(SDL2 REQUIRED)
set(OpenGL_GL_PREFERENCE "GLVND")
find_package(OpenGL REQUIRED)
find_package(glm REQUIRED)

set(LIBS ${OPENGL_LIBRARY} ${SDL2_LIBRARY})
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_BINARY_DIR build)
# set(SOURCES "./src" "./vendor/imgui")
set(SOURCES "./src")
file(GLOB sources ${SOURCES}/*.cpp)
set(EXE out)
add_executable(${EXE} ${sources})
target_link_libraries(${EXE} ${LIBS} "glm::glm")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++23")
